Added front display data, some logs.

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -10,3 +10,13 @@ td, th {
 .most-ordered-dish {
   color: red;
 }
+
+body {
+  width: 800px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+table {
+  margin: 0 auto;
+}
